--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
         <nav>
+            <a href="index.html">stories by <strong>Danny</strong></a>
             <ul>
-                <li>
-                    <a href="#">book</a>
+                <li class="book">
+                    <a href="#">Book</a>
                 </li>
-                <li>
+                <li class="cinza">
                     <a href="#">The story</a>
                 </li>
-                <li>
+                <li class="cinza">
                     <a href="#">Contact</a>
                 </li>
             </ul>
@@ -30,6 +32,11 @@
                 </p>
             </div>
         </section>
+                <section>
+                <p>
+                    <img src="src/Clique aqui para baixar a imagem.png" alt="livro">
+                </p>
+            </section>
     </main>
 </body>
 </html>
