--- a/index.html
+++ b/index.html
@@ -26,17 +26,51 @@
     <main>
         <section class="baner">
             <div>
-                <h1>Hate writing headlines? Use proven headline formulas!</h1>
+                <h1>Hate writing headlines? <br>
+                     Use proven headline formulas!</h1>
                 <p>
-                    Get access to 200 high converting headline formulas. Copy the title that fits best, insert your details and go live. It’s that easy!
+                    Get access to 200 high converting headline formulas. <br>
+                     Copy the title that fits best, insert your details and go live. <br> It’s that easy!
+                </p>
+                <button class="botao">Buy Now</button>
+                <p>
+                    View example headlines
                 </p>
             </div>
-        </section>
-                <section>
-                <p>
+            <div>
                     <img src="src/Clique aqui para baixar a imagem.png" alt="livro">
+            </div>
+            </section>
+            <section>
+                <h3 class="meio">What’s the Point?</h3>
+                <img src="src/01 1.png" alt="">
+                <p class="homem">
+                    Have you ever had that moment where you stare at your screen, just trying to <br> think of a good headline for your email, website or product... but nothing <br> really happens? Wouldn’t it be great to just skip that?
+                </p>
+                <img src="src/02 1.png" alt="">
+                <p class="bola">
+                    This book was initially a Google Spreadsheet we (Gijs and Danny) created for <br> our own projects. We were sick and tired of those days we kept looking at a <br> blank screen, unable to come up with any headlines, titles or subject lines.
+                </p>
+                <img src="src/08 1.png" alt="">
+                <p class="lampada">
+                    We a/b tested the new headlines on the websites of our clients and got <br>
+                     amazing results. Some headlines even doubled the initial conversion rates!
+                </p>
+            </section>
+            <section>
+                <h3>Experiments We Performed</h3>
+                <img src="src/tabela.png" alt="">
+                <p>
+                    Quickly, word spread around town, and a few co-workers asked us if we could share this “secret” collection of converting headlines with them. We did. They tested some of our headlines and saw some very positive results with these headlines as well. 
+They were blown away by the massive impact a headline could make. This success inspired us to share our collection of 200 headlines with everyone.
                 </p>
             </section>
     </main>
+    <footer>
+        <nav>
+            <p>Stories by Danny
+                © 2021 All Right Reserved.</p>
+        </nav>
+    </footer>
 </body>
 </html>
