--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">stories by <strong>Danny</strong></a>
+            <a href="index.html" class="subpaginas">stories by <strong>Danny</strong></a>
             <ul>
                 <li class="book">
                     <a href="#" class="subpaginas">Book</a>
@@ -44,9 +44,8 @@
             </div>
         </section>
         <section class="Point">
-            <div>
                 <h3>What's the Point?</h3>
-
+                <div>
                 <ul>
                     <li class="direita">
                         <img src="src/01 1.png" alt="">
@@ -71,19 +70,23 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="tabela">
             <h3>Experiments We Performed</h3>
-            <img src="src/tabela.png" alt="">
-            <p>
-                Quickly, word spread around town, and a few co-workers asked us if we could share this “secret”
+            <div>
+                <ul>
+
+                    <li>
+                <p>Quickly, word spread around town, and a few co-workers asked us if we could share this “secret”
                 collection of converting headlines with them. We did. They tested some of our headlines and saw some
-                <span>very positive</span> results with these headlines as well.
-            </p>
-            <br>
-            <p>
-                They were blown away by the massive impact a headline could make. This success inspired us to share our
-                collection of <span>200 headlines</span> with everyone.
-            </p>
+                <span>very positive</span> results with these headlines as well.</p>
+            </li>
+            <li>
+                <p>They were blown away by the massive impact a headline could make. This success inspired us to share our
+                collection of <span>200 headlines</span> with everyone.</p>
+            </li>
+        </ul>
+        <img src="src/tabela.png" alt="">
+        </div>
         </section>
     </main>
     <footer>
@@ -91,6 +94,11 @@
             <br>
             <p>Stories by Danny
                 © 2021 All Right Reserved.</p>
+                <a href="#">Impressum</a>
+                <a href="#">Reviews</a>
+                <a href="#">FAQ</a>
+                <a href="#">Shipping Services</a>
+                <a href="#">Ebooks</a>
         </nav>
     </footer>
 </body>
